<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.identification.fragment.CategoryFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            android:paddingBottom="60dp">

            <TextView
                android:id="@+id/about_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/about_title"
                android:textColor="?android:textColorPrimary"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/about_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/about_description"
                android:textColor="@color/gray"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="Цели"
                android:textColor="?android:textColorPrimary"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="Обязательно к выбору"
                android:textColor="@color/gray"
                android:textSize="16sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/goal_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                app:selectionRequired="true"
                app:singleSelection="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="Увлечения"
                android:textColor="?android:textColorPrimary"
                android:textSize="28sp"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/hobby_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                app:singleSelection="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="Отношение к алкоголю"
                android:textColor="?android:textColorPrimary"
                android:textSize="28sp"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/alcohol_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                app:singleSelection="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="Отношение к курению"
                android:textColor="?android:textColorPrimary"
                android:textSize="28sp"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/smoke_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                app:singleSelection="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="Отношение к животным"
                android:textColor="?android:textColorPrimary"
                android:textSize="28sp"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/pet_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                app:singleSelection="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="Отношение к спорту"
                android:textColor="?android:textColorPrimary"
                android:textSize="28sp"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/sport_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                app:singleSelection="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="Знак зодиака"
                android:textColor="?android:textColorPrimary"
                android:textSize="28sp"
                android:textStyle="bold" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/zodiac_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                app:singleSelection="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/about_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/about_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/about_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/about_hint"
                    android:inputType="textCapSentences"
                    android:maxLength="500">


                </com.google.android.material.textfield.TextInputEditText>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:text="Минимум 10 символов"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/about_edit_text" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>